<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".activity.BoaViagemActivity">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:id="@+id/ivLogo"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usuario"
        android:id="@+id/txtUsuario"
        android:layout_gravity="left" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edUsuario"
        android:inputType="text">
        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/senha"
        android:id="@+id/txtSenha" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/edSenha" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conect"
        android:id="@+id/cbConectar"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnEntrar"
        android:layout_gravity="bottom"
        android:onClick="entrarOnClick"/>


</LinearLayout>
