<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:id="@+id/ivTipoViagem" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/destino"
            android:id="@+id/txtDestiny" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/data"
            android:id="@+id/txtDate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/valor"
            android:id="@+id/txtValue" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:id="@+id/barraProgresso" />
    </LinearLayout>

</LinearLayout>